<resources>
    <string name="app_name">RGD</string>
    <string name="action_settings">Settings</string>
    <string name="res_regionale_ngezondheidsdienst">Regionale \nGezondheidsdienst</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_wait">Wacht alsjeblieft...</string>
    <string name="msg_unexpected_error"></string>
    <string name="msg_internet_conn">Check Internet Connection.</string>
    <string name="title_activity_news_detail">NewsDetailActivity</string>
    <string name="title_activity_medecin_list">MedecinListActivity</string>
    <string name="title_activity_guard_detail">GuardDetailActivity</string>
    <string name="alert_cant_locate_location">Kan uw huidige locatie niet vinden</string>
    <string name="message_denied">Permission \"%1$s\" has been denied.</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="channel_name" translatable="false">notification_channel</string>
    <string name="channel_description" translatable="false">post notifications of news, event and achievement</string>
    <string name="alert_no_data_found">Geen zoekresultaten voor</string>
    <string name="clinic_details">ClinicDetailActivity</string>
    <string name="title_activity_notification_list">NotificationListActivity</string>
    <string name="title_activity_download_map">DownloadMapActivity</string>

    <string name="lable_installed">geïnstalleerd</string>
    <string name="lable_not_installed">Niet geïnstalleerd</string>
    <string name="lable_partially_installed">Gedeeltelijk geïnstalleerd</string>
    <string name="text_installing">Installeren…</string>
    <string name="alert_busy_with_other_operations">MapLoader is bezig met andere bewerkingen</string>
    <string name="alert_map_update_completed">Kaartupdate is voltooid</string>
    <string name="alert_installation_completed">De installatie is voltooid</string>
    <string name="alert_installation_cancelled">Installatie is geannuleerd…</string>
    <string name="alert_uninstallation_completed">De installatie is voltooid</string>
    <string name="alert_uninstallation_cancelled">De installatie is geannuleerd…</string>
    <string name="label_ok">OK</string>
    <string name="alert_uninstalling">Verwijderen…</string>
    <string name="label_cancel">ANNULEREN</string>
    <string name="alert_downloading">downloaden</string>
    <string name="text_cancelling">Annuleren…</string>
    <string name="lable_cancel">ANNULEREN</string>
    <string name="btn_update">Bijwerken</string>
    <string name="res_address">Adres</string>
    <string name="res_phone_number">Telefoon nummer</string>

    <string name="label_start_date">Begin datum</string>
    <string name="label_end_date">Einddatum</string>
    <string name="search_medicine">Zoek geneesmiddel</string>
    <string name="res_name">Naam</string>
    <string name="res_name_service">Naam :</string>
    <string name="res_services">Diensten</string>
    <string name="res_services_service">Diensten :</string>
    <string name="res_working_time">Werktijd</string>
    <string name="res_working_time_service">Werktijd :</string>
    <string name="res_email">E-mail</string>
    <string name="res_openingstijden">Openingstijden</string>

    <string name="res_location">locaties</string>
    <string name="res_search">Zoeken</string>
    <string name="res_ok">Oke</string>
    <string name="error_turn_on_gps">Schakel de GPS van uw apparaat in</string>


</resources>
