<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    android:outlineAmbientShadowColor="@color/greenmedium"
    android:outlineSpotShadowColor="@color/greenmedium"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:ellipsize="end"
            android:fontFamily="@font/fagono_medium"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            tools:text="sfdfdsfadfdfffdfadfdfdsfdsfdffdsfaf" />

        <!--<TextView
            android:id="@+id/txt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/fagono"
            android:paddingLeft="@dimen/_10sdp"
            android:textColor="@color/gray"
            android:textSize="@dimen/_14ssp"
            tools:text="sfdfdsfadfdfffdfadfdfdsfdsfdffdsfaf" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/res_address"
                android:fontFamily="@font/fagono"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/green"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=":"
                />

            <TextView
                android:id="@+id/txt_address"
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fagono"
                tools:text="21 Des,2019 6:00 AM"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/gray"
                />


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_10sdp"
            android:visibility="visible"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/res_phone_number"
                android:fontFamily="@font/fagono"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/green"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=":"
                />

            <LinearLayout
                android:id="@+id/layoutPhones"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:orientation="vertical">

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/res_email"
                android:fontFamily="@font/fagono"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/green"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=":"
                />

            <TextView
                android:id="@+id/txt_email"
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fagono"
                tools:text="21 Des,2019 6:00 AM"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/gray"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/res_openingstijden"
                android:fontFamily="@font/fagono"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/green"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=":"
                />

            <TextView
                android:id="@+id/txt_opentime"
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fagono"
                tools:text="21 Des,2019 6:00 AM"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/gray"
                />


        </LinearLayout>


        <!--https://stackoverflow.com/questions/5800657/how-to-create-custom-ratings-bar-in-android-->


    </LinearLayout>
</androidx.cardview.widget.CardView>